Ability to enter child’s details instead

--- a/app/views/start.html
+++ b/app/views/start.html
@@ -18,8 +18,8 @@
 
         {{ govukRadios({
           classes: "govuk-radios--inline",
-          idPrefix: "changed-name",
-          name: "changed-name",
+          idPrefix: "received-letter",
+          name: "received-letter",
           fieldset: {
             legend: {
               text: "Have you received a letter about your child’s weight?",
