--- a/app/views/index.html
+++ b/app/views/index.html
@@ -40,7 +40,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Get help managing your child’s weight</h1>
+      <h1 class="govuk-heading-xl">Get help managing your family’s health</h1>
 
       <p class="govuk-body">Use this service to get help with:</p>
 
