--- a/app/views/received-letter.html
+++ b/app/views/received-letter.html
@@ -25,7 +25,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/create-account" method="post">
+      <form action="/letter-code" method="post">
+
+        {% set errorMessage = {text: "Code was invalid. Please check and try again."} if error %}
 
         {{ govukInput({
           label: {
@@ -38,12 +40,24 @@
           },
           classes: "govuk-input--width-20",
           id: "letter-code",
-          name: "letter-code"
+          name: "letter-code",
+          errorMessage: errorMessage
         }) }}
 
         {{ govukButton({
           text: "Continue"
         }) }}
+
+        <details class="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              I can’t find the letter
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            <p>If you have lost the letter, you can <a href="/enter-child-weight-details">enter your child’s weight details</a> instead.</p>
+          </div>
+        </details>
 
       </form>
     </div>
