Improved logic in questions

--- a/app/views/exercise.html
+++ b/app/views/exercise.html
@@ -25,12 +25,12 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/exercise-follow-up" method="post">
+      <form action="/enough-exercise" method="post">
 
         {{ govukRadios({
           classes: "govuk-radios",
-          idPrefix: "changed-name",
-          name: "changed-name",
+          idPrefix: "enough-exercise",
+          name: "enough-exercise",
           fieldset: {
             legend: {
               text: "Do you feel your child gets enough exercise each day?",
