--- a/app/views/your-concern.html
+++ b/app/views/your-concern.html
@@ -25,7 +25,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/eating-meals" method="post">
+      <form action="/your-concern-about-you" method="post">
 
         {{ govukRadios({
           classes: "govuk-radios",
