--- a/app/views/exercise-follow-up.html
+++ b/app/views/exercise-follow-up.html
@@ -15,7 +15,7 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: "/eating-meals"
+    href: "/exercise"
   }) }}
 {% endblock %}
 
