--- a/app/views/sugary-drinks.html
+++ b/app/views/sugary-drinks.html
@@ -15,7 +15,7 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: "/start"
+    href: "/snacking"
   }) }}
 {% endblock %}
 
